# xbox_custom

./: README.md  pyproject.toml
xbox_custom/: hooks.py  modules.txt  patches.txt
xbox_custom/overrides/: outstanding.py  payment.py  sales_order.py  search_link.py  valid_payment_entry.py
xbox_custom/overrides/employee/: employee.py
xbox_custom/overrides/payment/: payment_entry.py
xbox_custom/permissions/: sales_order.py
xbox_custom/public/css/: style.css
xbox_custom/public/js/: currency.js  payment_entry.js  quotation-process.js  sale-order-process.js
xbox_custom/xbox_custom/docmeta/item_note/: item_note.js  item_note.json  item_note.py  test_item_note.py
