[project]
name = "xbox_custom"
authors = [
    { name = "vhtsoft.com", email = "developer@vhtsoft.com"}
]
description = "Add some new feature to system for XBox company"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "vhtfm~=15.0.0" # Installed and managed by fox.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.fox.dev-dependencies]
# package_name = "~=1.1.0"
